# Stellara_Contracts

Backend/: package-lock.json  (+1 more)
Contracts/: Cargo.toml  GOVERNANCE_GUIDE.md  INTEGRATION_TEST_PATTERNS.md  README.md  UPGRADEABILITY.md
Contracts/.cargo/: config.toml
Contracts/contracts/: RevocationRegistry.sol  SoulboundCredential.sol
Contracts/contracts/did-registry/: Cargo.toml
Contracts/contracts/identity-hub/: Cargo.toml
Contracts/contracts/parametric_insurance/: Cargo.toml
Contracts/contracts/token/: Cargo.toml
Contracts/contracts/verifiable-credentials/: Cargo.toml
Contracts/integration-tests/: Cargo.toml
Contracts/integration-tests/test_snapshots/: add_collateral_pulls_more_tokens_into_contract.1.json  approver_excluded_from_proposal_subset_cannot_approve.1.json  cancelled_proposal_cannot_be_executed.1.json  cannot_execute_twice.1.json  cdp_full_lifecycle_moves_tokens_end_to_end.1.json  concurrent_proposals_have_independent_state.1.json  duplicate_and_post_quorum_approvals_are_rejected.1.json  fresh_cdp_is_not_liquidatable.1.json  full_2of3_lifecycle_executes_after_timelock.1.json  fuzz_quorum_and_execution_through_contract.1.json  invalid_threshold_zero_is_rejected_at_proposal_time.1.json  liquidation_burns_debt_and_pays_liquidator.1.json  mint_without_oracle_price_returns_error_no_token_movement.1.json  quorum_not_met_blocks_execution.1.json  register_asset_rejects_liq_cratio_above_min.1.json  rejected_proposal_cannot_be_executed.1.json  simulate_upgrade_across_two_contracts.1.json  test_academy_rewards_trigger_social_rewards.1.json  test_messaging_contract_initializes_successfully.1.json  test_messaging_double_initialization_blocked.1.json  test_messaging_notifications_from_other_contract_flows.1.json  test_shared_governance_module_across_contracts.1.json  test_trading_contract_initializes_successfully.1.json  test_trading_double_initialization_blocked.1.json  test_trading_interacts_with_fee_distribution.1.json  threshold_above_approver_count_is_rejected.1.json  timelock_one_second_early_fails_exact_expiry_succeeds.1.json
Contracts/integration-tests/tests/: cross_chain_replay_protection.rs  synthetic_assets.rs  upgrade_paths.rs
Contracts/scripts/deploy/: deploy_upgradeable.sh
Contracts/shared/src/: state_verification.rs
Contracts/shared/test_snapshots/: approver_not_in_proposal_list_is_unauthorized.1.json  cancel_overwrites_a_rejected_proposal.1.json  cannot_execute_before_approval.1.json  cannot_execute_twice.1.json  duplicate_approval_is_rejected.1.json  empty_approver_set_cannot_form_a_quorum.1.json  execution_is_permissionless_for_any_address.1.json  fuzz_quorum_flips_exactly_at_threshold.10.json  fuzz_quorum_flips_exactly_at_threshold.11.json  (+26 more)
Contracts/test/: RevocationRegistry.test.js  SoulboundCredential.test.js  upgradeability.test.js
(+187 files in other folders)
