[workspace]
members = [
    "contracts/trading",
    "contracts/staking-rewards",
    "contracts/social_rewards",
    "contracts/messaging",
    "contracts/academy",
    "contracts/academy-rewards",
    "contracts/synthetic-assets",
    "contracts/tcr",
    "contracts/cross-chain-router",
    "contracts/amm",
    "contracts/did-registry",
    "contracts/identity-hub",
    "contracts/liquidity-mining",
    "contracts/stablecoin_reserve",
    "contracts/verifiable-credentials",
    "contracts/parametric_insurance",
    "contracts/token",
    "integration-tests",
    "shared",
    "contracts/upgradeability",
]
resolver = "2"
