[workspace]
members = [
    "contracts/trading",
    "contracts/staking-rewards",
    "contracts/social_rewards",
    "contracts/messaging",
    "contracts/academy",
    "contracts/academy-rewards",
    "contracts/synthetic-assets",
    "contracts/tcr",
    "contracts/cross-chain-router",
    "contracts/amm",
    "integration-tests",
    "shared",
    "contracts/upgradeability",
]
# WIP contracts excluded until ready for CI:
# contracts/token, contracts/did-registry, contracts/identity-hub,
# contracts/liquidity-mining, contracts/stablecoin_reserve,
# contracts/verifiable-credentials, contracts/parametric_insurance
resolver = "2"
