[package]
name = "did-registry"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = "20.5.0"
shared = { path = "../../shared" }
upgradeability = { path = "../upgradeability" }
stellar-xdr = { version = "21.0.0", default-features = false }

[dev-dependencies]
soroban-sdk = { version = "20.5.0", features = ["testutils"] }
