[package]
name = "token"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/libs.rs"

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = { version = "20.5.0", default-features = false }

[dev-dependencies]
soroban-sdk = { version = "20.5.0", features = ["testutils"], default-features = false }
